force-app/main/default/objects/ssot__ProcessException__dlm/fields/ssot__ExternalReference__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalReference__c</fullName>
    <label>External Reference</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalReference</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>