force-app/main/default/objects/ssot__ProcessException__dlm/fields/ssot__ProcessExceptionPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessExceptionPriority__c</fullName>
    <label>Process Exception Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessExceptionPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>