force-app/main/default/objects/ssot__ProcessException__dlm/fields/ssot__ProcessExceptionSeverityCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessExceptionSeverityCategory__c</fullName>
    <label>Process Exception Severity Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessExceptionSeverityCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>