force-app/main/default/objects/ssot__ProcessException__dlm/fields/ssot__ProcessExceptionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessExceptionStatus__c</fullName>
    <label>Process Exception Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessExceptionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>